Fix collapsing height in calendar on mobile landscape

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -52,6 +52,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    min-height: 500px;
 }
 
 .gantt-header-controls {
